chore: save current changes

--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
-# Uncomment .env from .gitignore to prevent it from being committed to version control
-TOKEN=secret-starter-mern
-MONGODB_URI=<your_mongodb_uri mongodb+srv://username:password@your-cluster.mongodb.net/database>
+# MongoDB Atlas Connection URI
+MONGODB_URI=mongodb+srv://ylz3333:Ylz37628176@cluster0.vhg9tbv.mongodb.net/test?retryWrites=true&w=majority
+
+# Server Port
+PORT=3000
+
+# Token (optional)
+TOKEN=mp3-test-token
